syntax = "proto3";

package customer_service;

service CustomerService {
  // Returns stream of all the customers stored in DB
  rpc SelectCustomers(CustomersRequest) returns (stream Customer);
  // Returns 10 customers with newest created_date
  rpc SelectNewestCustomers(CustomersRequest) returns (NewestCustomersResponse);
  // Returns single customer's details
  rpc CustomerDetails(CustomerDetailsRequest) returns (CustomerDetailsResponse);
}

message CustomersRequest {}

message NewestCustomersResponse {
  repeated Customer customer = 1;
}

message Customer {
  string name = 1;
  string last_name = 2;
  string registration_date = 3;
}

message CustomerDetailsRequest {
  int64 id = 1;
}

message CustomerDetailsResponse {
  string name = 1;
  string last_name = 2;
  string registration_date = 3;
  string address = 4;
  optional string address2 = 5;
  string district = 6;
  string phone = 7;

}